# localivre

./: .env  .gitignore  LICENSE  README.md  back-compose.yml  banco-compose.yml  front-compose.yml  kong-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
frontend/: Dockerfile  package.json
frontend/src/lib/: api.js
frontend/src/routes/: +page.svelte
frontend/src/routes/db_test/: +page.svelte
frontend/src/routes/ping/: +page.svelte
